Update build to java 21
Signed-off-by: Paolo Di Tommaso <paolo.ditommaso@gmail.com>